sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:12: error: ')' expected but integer literal found.
    for (i <- getNombreValeurs()-2 0 by -1) {
                                   ^AlgCocktailSort1:18: error: illegal start of simple expression
  } while (lastEchange = true)
  ^